Adds local custom packages to the image.

--- a/rpi3-build/conf/local.conf
+++ b/rpi3-build/conf/local.conf
@@ -246,4 +246,5 @@ PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
 #PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
 #PACKAGE_CLASSES ?= "package_deb"
 #IMAGE_FEATURES += "package-management"
+IMAGE_INSTALL_append = "hello-source hello-generic hello-autotools hello-cmake hello-module"
 
