Adds additionnal users and permissions on final image.

--- a/rpi3-build/conf/local.conf
+++ b/rpi3-build/conf/local.conf
@@ -238,6 +238,8 @@ CONF_VERSION = "1"
 
 DL_DIR ?= "${TOPDIR}/../dl"
 INHERIT += "rm_work"
+INHERIT += "extrausers"
+INHERIT += "extrapermissions"
 MACHINE = "raspberrypi3"
 ENABLE_UART = "1"
 
@@ -246,5 +248,11 @@ PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
 #PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
 #PACKAGE_CLASSES ?= "package_deb"
 #IMAGE_FEATURES += "package-management"
-IMAGE_INSTALL_append = "hello-source hello-generic hello-autotools hello-cmake hello-module"
 
+# customization
+IMAGE_INSTALL_append = "hello-source hello-generic hello-autotools hello-cmake hello-module"
+EXTRA_USERS_PARAMS = "\
+              usermod -P root root;\
+              useradd -P rpi rpi;"
+EXTRA_PERMISSIONS_PARAMS = "\
+              chmod 700 ${IMAGE_ROOTFS}/home/rpi; "
