Adds kernel modules to images. Adds Wi-Fi support. Adds 64-bit Raspberry Pi 3 build.

--- a/rpi3-64-build/conf/local.conf
+++ b/rpi3-64-build/conf/local.conf
@@ -240,7 +240,7 @@ DL_DIR ?= "${TOPDIR}/../dl"
 INHERIT += "rm_work"
 INHERIT += "extrausers"
 INHERIT += "extrapermissions"
-MACHINE = "raspberrypi3"
+MACHINE = "raspberrypi3-64"
 ENABLE_UART = "1"
 
 PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
