Adds custom hostname and imports only broadcom Wi-Fi firmware. Remove support for RT kernel on 64-bit image.

--- a/rpi3-build/conf/local.conf
+++ b/rpi3-build/conf/local.conf
@@ -237,6 +237,7 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 CONF_VERSION = "1"
 
 DL_DIR ?= "${TOPDIR}/../dl"
+hostname_pn-base-files = "yoctopi3"
 INHERIT += "rm_work"
 INHERIT += "extrausers"
 INHERIT += "extrapermissions"
@@ -251,7 +252,7 @@ PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
 
 # customization
 #DISTRO_FEATURES_append += "wifi"
-IMAGE_INSTALL_append += "linux-firmware wpa-supplicant iw wireless-tools kernel-modules"
+IMAGE_INSTALL_append += "linux-firmware-bcm43430 wpa-supplicant iw wireless-tools kernel-modules"
 IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module"
 EXTRA_USERS_PARAMS = "\
               usermod -P root root;\
