--- a/rpi3-64-build/conf/local.conf
+++ b/rpi3-64-build/conf/local.conf
@@ -237,21 +237,21 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 CONF_VERSION = "1"
 
 DL_DIR ?= "${TOPDIR}/../dl"
+hostname_pn-base-files = "yoctopi3-64"
 INHERIT += "rm_work"
 INHERIT += "extrausers"
 INHERIT += "extrapermissions"
 MACHINE = "raspberrypi3-64"
 ENABLE_UART = "1"
 
-PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
-#PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt-dev"
-#PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
+
+PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-dev"
 #PACKAGE_CLASSES ?= "package_deb"
 #IMAGE_FEATURES += "package-management"
 
 # customization
 #DISTRO_FEATURES_append += "wifi"
-IMAGE_INSTALL_append += "linux-firmware wpa-supplicant iw wireless-tools kernel-modules"
+IMAGE_INSTALL_append += "linux-firmware-bcm43430 wpa-supplicant iw wireless-tools kernel-modules"
 IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module"
 EXTRA_USERS_PARAMS = "\
               usermod -P root root;\
