Remove non-dev kernel (4.12.y) because it failed to detect wireless interfaces on 64-bit.

--- a/rpi3-64-build/conf/local.conf
+++ b/rpi3-64-build/conf/local.conf
@@ -245,7 +245,7 @@ MACHINE = "raspberrypi3-64"
 ENABLE_UART = "1"
 
 
-PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-dev"
+#PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-dev"
 #PACKAGE_CLASSES ?= "package_deb"
 #IMAGE_FEATURES += "package-management"
 
