Reorganized local.conf and adds some new stuff from meta-software-sv.

--- a/rpi3-build/conf/local.conf
+++ b/rpi3-build/conf/local.conf
@@ -237,25 +237,31 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 CONF_VERSION = "1"
 
 DL_DIR ?= "${TOPDIR}/../dl"
-hostname_pn-base-files = "yoctopi3"
+MACHINE = "raspberrypi3"
 INHERIT += "rm_work"
 INHERIT += "extrausers"
 INHERIT += "extrapermissions"
-MACHINE = "raspberrypi3"
 ENABLE_UART = "1"
 
+hostname_pn-base-files = "yoctopi3"
 PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
 #PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt-dev"
 #PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
 #PACKAGE_CLASSES ?= "package_deb"
 #IMAGE_FEATURES += "package-management"
 
-# customization
-#DISTRO_FEATURES_append += "wifi"
-IMAGE_INSTALL_append += "linux-firmware-bcm43430 wpa-supplicant iw wireless-tools kernel-modules"
-IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module"
+# be sure to have Wi-Fi firmware and kernel modules
+IMAGE_INSTALL_append += "linux-firmware-bcm43430 kernel-modules"
+# adds some stuff for wireless
+IMAGE_INSTALL_append += "wpa-supplicant iw wireless-tools"
+# our custom packages
+IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module hello-initd custom-files"
+
+# configure root password and adds user
 EXTRA_USERS_PARAMS = "\
               usermod -P root root;\
               useradd -P rpi rpi;"
+# configure file permissions
 EXTRA_PERMISSIONS_PARAMS = "\
               chmod 700 ${IMAGE_ROOTFS}/home/rpi; "
+
