--- a/rpi3-build/conf/local.conf
+++ b/rpi3-build/conf/local.conf
@@ -243,12 +243,9 @@ INHERIT += "extrausers"
 INHERIT += "extrapermissions"
 ENABLE_UART = "1"
 
-hostname_pn-base-files = "yoctopi3"
+hostname_pn-base-files = "yoctopi"
 PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
-#PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt-dev"
-#PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
 #PACKAGE_CLASSES ?= "package_deb"
-#IMAGE_FEATURES += "package-management"
 
 # be sure to have Wi-Fi firmware and kernel modules
 IMAGE_INSTALL_append += "linux-firmware-bcm43430 kernel-modules"
