--- a/rpi3-64-build/conf/bblayers.conf
+++ b/rpi3-64-build/conf/bblayers.conf
@@ -8,7 +8,10 @@ BBFILES ?= ""
 BBLAYERS ?= " \
   ${TOPDIR}/../yocto-poky/meta \
   ${TOPDIR}/../yocto-poky/meta-poky \
-  ${TOPDIR}/../yocto-poky/meta-yocto-bsp \
+  ${TOPDIR}/../meta-openembedded/meta-oe \
+  ${TOPDIR}/../meta-openembedded/meta-networking \
+  ${TOPDIR}/../meta-openembedded/meta-python \
   ${TOPDIR}/../meta-raspberrypi \
+  ${TOPDIR}/../meta-raspberrypi-rt-sv \
   ${TOPDIR}/../meta-softwares-sv \
   "
