Adds BeagleBone configuration.

--- a/beaglebone-build/conf/local.conf
+++ b/beaglebone-build/conf/local.conf
@@ -149,7 +149,6 @@ EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 #   - 'buildstats' collect build statistics
 #   - 'image-mklibs' to reduce shared library files size for an image
 #   - 'image-prelink' in order to prelink the filesystem image
-#   - 'image-swab' to perform host system intrusion detection
 # NOTE: if listing mklibs & prelink both, then make sure mklibs is before prelink
 # NOTE: mklibs also needs to be explicitly enabled for a given image, see local.conf.extended
 USER_CLASSES ?= "buildstats image-mklibs image-prelink"
@@ -236,17 +235,18 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
 
+MACHINE = "beaglebone"
 DL_DIR ?= "${TOPDIR}/../dl"
-MACHINE = "raspberrypi3"
 INHERIT += "rm_work"
 INHERIT += "extrausers"
 INHERIT += "extrapermissions"
-ENABLE_UART = "1"
 
-hostname_pn-base-files = "yoctopi"
-PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
-#PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
+hostname_pn-base-files = "yoctobone"
 #PACKAGE_CLASSES ?= "package_deb"
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-rt"
+#PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-ipipe"
+#PREFERRED_VERSION_linux-yocto-rt = "4.9%"
 
 # our custom packages
 IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module hello-initd custom-files"
@@ -254,8 +254,8 @@ IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake 
 # configure root password and adds user
 EXTRA_USERS_PARAMS = "\
               usermod -P root root;\
-              useradd -P rpi rpi;"
+              useradd -P beaglebone beaglebone;"
 # configure file permissions
 EXTRA_PERMISSIONS_PARAMS = "\
-              chmod 700 ${IMAGE_ROOTFS}/home/rpi; "
+              chmod 700 ${IMAGE_ROOTFS}/home/beaglebone; "
 
