Uses u-boot bootloader for Raspberry Pi 3 32-bit and 64-bit builds.

--- a/rpi3-64-build/conf/local.conf
+++ b/rpi3-64-build/conf/local.conf
@@ -247,10 +247,6 @@ hostname_pn-base-files = "yoctopi64"
 PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
 #PACKAGE_CLASSES ?= "package_deb"
 
-# be sure to have Wi-Fi firmware and kernel modules
-IMAGE_INSTALL_append += "linux-firmware-bcm43430 kernel-modules"
-# adds some stuff for wireless
-IMAGE_INSTALL_append += "wpa-supplicant iw wireless-tools"
 # our custom packages
 IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module hello-initd custom-files"
 
@@ -261,4 +257,6 @@ EXTRA_USERS_PARAMS = "\
 # configure file permissions
 EXTRA_PERMISSIONS_PARAMS = "\
               chmod 700 ${IMAGE_ROOTFS}/home/rpi; "
+
+RPI_USE_U_BOOT = "1"
 
