--- a/rpi3-build/conf/local.conf
+++ b/rpi3-build/conf/local.conf
@@ -259,3 +259,5 @@ EXTRA_USERS_PARAMS = "\
 EXTRA_PERMISSIONS_PARAMS = "\
               chmod 700 ${IMAGE_ROOTFS}/home/rpi; "
 
+RPI_USE_U_BOOT = "1"
+
