Fixes error in comment.

--- a/rpi0w-build/conf/local.conf
+++ b/rpi0w-build/conf/local.conf
@@ -241,7 +241,7 @@ INHERIT += "rm_work"
 INHERIT += "extrausers"
 INHERIT += "extrapermissions"
 ENABLE_UART = "1"
-# if you want to use PREEMPT_RT 4.9.x kernel or other non RT kernels, uncomment
+# if you want to use PREEMPT_RT 4.9.x kernel or other non RT kernels, comment
 # the next two lines that change serial console and disable bluetooth
 SERIAL_CONSOLE := "115200 ttyAMA0"
 DISABLE_BT = "1"
@@ -265,3 +265,4 @@ EXTRA_PERMISSIONS_PARAMS = "\
 # In rocko branch, u-boot is not working yet with Pi Zero W
 # see https://github.com/agherzan/meta-raspberrypi/issues/160
 #RPI_USE_U_BOOT = "1"
+
