Adds stuff in local Pi 3 configuration for compiling I-pipe kernel.
Kernel 4.9.51 does not have Pi 3 B+ device tree and latest rocko release
pass it to kernel compilation. So we remove it from KERNEL_DEVICETREE for now.

--- a/rpi3-build/conf/local.conf
+++ b/rpi3-build/conf/local.conf
@@ -245,11 +245,16 @@ ENABLE_UART = "1"
 
 hostname_pn-base-files = "yoctopi"
 PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
+#PREFERRED_VERSION_virtual/kernel := "4.14%"
 #PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
+# for I-pipe/Xenomai, remove Pi 3 B+ device tree as 4.9.51 does not support it
+#KERNEL_DEVICETREE_remove += "bcm2710-rpi-3-b-plus.dtb"
+
 #PACKAGE_CLASSES ?= "package_deb"
 
 # our custom packages
 IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module hello-initd custom-files"
+#IMAGE_INSTALL_append += "hello-xenomai"
 
 # configure root password and adds user
 EXTRA_USERS_PARAMS = "\
