Adds Xenomai sample configuration for Raspberry Pi Zero.

--- a/rpi0w-build/conf/local.conf
+++ b/rpi0w-build/conf/local.conf
@@ -249,10 +249,15 @@ DISABLE_BT = "1"
 hostname_pn-base-files = "yoctopi"
 PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-rt"
 PREFERRED_VERSION_linux-raspberrypi-rt := "4.14%"
+# For I-pipe/Xenomai kernel
+#PREFERRED_PROVIDER_virtual/kernel := "linux-raspberrypi-ipipe"
+#KERNEL_DEVICETREE_remove += "bcm2710-rpi-3-b-plus.dtb"
+
 #PACKAGE_CLASSES ?= "package_deb"
 
 # our custom packages
 IMAGE_INSTALL_append += "hello-source hello-generic hello-autotools hello-cmake hello-module hello-initd custom-files"
+#IMAGE_INSTALL_append += "hello-xenomai"
 
 # configure root password and adds user
 EXTRA_USERS_PARAMS = "\
