Updates beaglebone configuration due to thud branch changes.

--- a/beaglebone-build/conf/local.conf
+++ b/beaglebone-build/conf/local.conf
@@ -235,7 +235,7 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
 
-MACHINE = "beaglebone"
+MACHINE = "beaglebone-yocto"
 DL_DIR ?= "${TOPDIR}/../dl"
 INHERIT += "rm_work"
 INHERIT += "extrausers"
